--- a/index.html
+++ b/index.html
@@ -10,17 +10,23 @@
 </head>
 <body>
     <header>
-        <nav class="w-11/12 mx-auto flex justify-between border-b-2 py-3">
+        <nav class="w-11/12 mx-auto flex justify-between border-b-2 py-3 border-[#17171733]">
             <div class="logo">
-              <img src="./asserts/Logo.png" alt="">
+              <img class="w-[130px]" src="./asserts/Logo.png" alt="">
             </div>
             <div class="searchBtn">
                <button class="btn">Sort by view</button>
             </div>
             <div class="sortBtn">
-              <button class="btn">Blog</button>
+              <button class="btn bg-[#FF1F3D] text-white">Blog</button>
             </div>
         </nav>
+
+        <div id="button-container" class=" flex justify-center gap-5 my-8">
+        <button class="btn btn-sm bg-[#FF1F3D] text-white">All</button>
+        </div>
     </header>
+
+    <script src="./javaScript/script.js"></script>
 </body>
 </html>
