--- a/index.html
+++ b/index.html
@@ -23,9 +23,16 @@
         </nav>
 
         <div id="button-container" class=" flex justify-center gap-5 my-8">
-        <button class="btn btn-sm bg-[#FF1F3D] text-white">All</button>
+         <button onclick="videoCategories()" class="btn btn-sm bg-[#FF1F3D] text-white">All</button>
         </div>
     </header>
+
+    <main class="w-11/12 mx-auto">
+        <section>
+             <div id="video-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-10">  
+             </div>
+        </section>
+    </main>
 
     <script src="./javaScript/script.js"></script>
 </body>
